sort.basic.lessons.sort.basic.bubble.AlgBubbleSort2.scala.error
AlgBubbleSort2:4: error: not found: value get
  while (c!=get(NombreValeurs())){
            ^AlgBubbleSort2:4: error: not found: value NombreValeurs
  while (c!=get(NombreValeurs())){
                ^AlgBubbleSort2:6: error: not found: value getNombreValeur
      for (j<-0 to getNombreValeur()-1){
                   ^